--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   src="https://code.jquery.com/jquery-2.2.4.min.js"
   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
   crossorigin="anonymous"></script>
-<script type="text/javascript" src="/qna-widget.js"></script>
+<script type="text/javascript" src="dist/qna-widget.js"></script>
 <script type="text/javascript">
     QnAWidget.addHash('32132323SDFASsdfasdf');
     QnAWidget.init();
