--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Check</title>
 </head>
 <body>
-<h1>Hi</h1>
+<h1>Seller Center</h1>
 
 <script
   src="https://code.jquery.com/jquery-2.2.4.min.js"
@@ -16,6 +16,7 @@
 <script type="text/javascript" src="dist/qna-widget.js"></script>
 <script type="text/javascript">
     QnAWidget.addHash('32132323SDFASsdfasdf');
+    QnAWidget.setIntervalTimeout(5000);
     QnAWidget.init();
 </script>
 </body>
