--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 <script type="text/javascript" src="dist/qna-widget.js"></script>
 <script type="text/javascript">
     QnAWidget.init({
+        devMode: true,
         token: '9fc4a25183485d5cb00cb2a8a2e7f48665a34d17:3b29ee741a3f43e9:6q2Bzebzea54lfXangiMyQ=='
     });
 </script>
